packages/cashc/test/compiler/ParseError/incomplete_pragma_version.cash
pragma radiantscript >1;

contract Test() {
    return {
        hello(sig s, pubkey pk) {
            require(checkSig(s, pk));
        },

        world(int a) {
            require(a + 5 == 10);
        }
    }
}
